// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should open the popup when the button is clicked 1`] = `
Array [
  Array [
    "set-type",
    undefined,
  ],
]
`;

exports[`should open the popup when the button is clicked 2`] = `
<div
  className="dropdown"
>
  <Toggler
    onRequestClose={[Function]}
    open={true}
    overlay={
      <SetTypePopup
        issue={
          Object {
            "type": "bug",
          }
        }
        onSelect={[Function]}
      />
    }
  >
    <Button
      className="button-link issue-action issue-action-with-options js-issue-set-type"
      onClick={[Function]}
    >
      <IssueTypeIcon
        className="little-spacer-right"
        query="bug"
      />
      issue.type.bug
      <DropdownIcon
        className="little-spacer-left"
      />
    </Button>
  </Toggler>
</div>
`;

exports[`should render with the action 1`] = `
<div
  className="dropdown"
>
  <Toggler
    onRequestClose={[Function]}
    open={false}
    overlay={
      <SetTypePopup
        issue={
          Object {
            "type": "bug",
          }
        }
        onSelect={[Function]}
      />
    }
  >
    <Button
      className="button-link issue-action issue-action-with-options js-issue-set-type"
      onClick={[Function]}
    >
      <IssueTypeIcon
        className="little-spacer-right"
        query="bug"
      />
      issue.type.bug
      <DropdownIcon
        className="little-spacer-left"
      />
    </Button>
  </Toggler>
</div>
`;

exports[`should render without the action when the correct rights are missing 1`] = `
<span>
  <IssueTypeIcon
    className="little-spacer-right"
    query="bug"
  />
  issue.type.bug
</span>
`;
